examples/test/testpolicy17290.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17290
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key6: value42
      key48: value0
      key34: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value33
          key25: value13
      podSelector:
        matchLabels:
          key28: value0
          key26: value24
